[package]
name = "bit-struct"
version = "0.3.2"
edition = "2021"
description = "Define structs which have fields which are assigned to individual bits, not bytes"
repository = "https://github.com/parallelsystems/bit-struct"
documentation = "https://docs.rs/crate/bit-struct/latest"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bit", "struct", "macros"]
categories = ["no-std"]
rust-version = "1.62.1"

[dependencies]
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1.0"
matches = "0.1.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"
serde_json = "1.0"
postcard = {version = "1.0.4", features = ["alloc"] }

[features]
default = ["serde"]
